--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,15 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+
 image = "0.25.9"
+
 clap = {version = "4.5.5",features = ["derive"]}
 
 colored = "2.1.0"
+
+rusttype = "0.9.3"
+
+rayon = "1.10.0"
+imageproc = "0.25.0"
+opencv = { version = "0.98", features = ["clang-runtime"] }
