--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,5 @@ opencv = { version = "0.98", features = ["clang-runtime"] }
 crossterm = "0.27"
 anyhow = "1.0"
 rand = "0.8"
+eframe = "0.27"
+egui = "0.27"
